add revoke all consents behaviour
